<resources>
    <string name="app_name">কোন দোয়া পড়িলে কি হয়</string>
    <string name="hello_blank_fragment">hello fragment</string>

    <string name="heading1">গুনাহ মাফের ৪টি বিশেষ দোয়া</string>
111111111111111111111111111111111111111111111111111111111111111111
    <string name="arbi1">
ﺳُﺒْﺤَﺎﻥَ ﺍﻟﻠﻪِ، ﺍَﻟْﺤَﻤْﺪُ ِﻟﻠﻪِ، ﺍَﻟﻠﻪُ ﺃَﻛْﺒَﺮُ، ﻵ ﺇﻟﻪَ ﺇﻻَّ ﺍﻟﻠﻪُ ﻭَﺣْﺪَﻩُ ﻻَ ﺷَﺮِﻳْﻚَ ﻟَﻪُ، ﻟَﻪُ ﺍﻟْﻤُﻠْﻚُ ﻭَ ﻟَﻪُ ﺍﻟْﺤَﻤْﺪُ ﻭَ ﻫُﻮَ ﻋَﻠَﻰ ﻛُﻞِّ ﺷَﻴْﺊٍ ﻗَﺪِﻳْﺮٌ -
    </string>

    <string name="pro1">
      সুবহা-নাল্লা-হ (৩৩ বার)।
        \n আলহাম্দুলিল্লা-হ (৩৩ বার)।
        \n আল্লাহু-আকবার (৩৩ বার)।
        \n লা ইলা-হা ইল্লাল্লা-হু ওয়াহ্দাহূ লা শারীকা লাহু; লাহুল মুল্কু ওয়া লাহুল হাম্দু ওয়া হুয়া ‘আলা কুল্লে শাইয়িন ক্বাদীর (১ বার)।
    </string>

    <string name="meaning1">
 আল্লাহ তায়ালা পূতপবিত্র। যাবতীয় প্রশংসা আল্লাহর জন্য।
        \n আল্লাহ সবার চেয়ে বড়। নেই কোন উপাস্য একক আল্লাহ ব্যতীত; তাঁর কোন শরীক নেই।
        \n তাঁরই জন্য সমস্ত রাজত্ব ও তাঁরই জন্য যাবতীয় প্রশংসা। তিনি সকল কিছুর উপরে ক্ষমতাশালী।

    </string>
2222222222222222222222222222222222222222222222222222222222222222222
    <string name="heading2">
আল্লাহর সন্তুষ্টি পাওয়ার দোয়া
    </string>

    <string name="arbi2">
 رَضِيتُ بِاللَّهِ رَبًّا وَبِالْإِسْلَامِ دِينًا وَبِمُحَمَّدٍ نَبِيًّا
    </string>

    <string name="pro2">
 রাজিতু বিল্লাহি রাব্বান, ওয়াবিল ইসলামি দীনান, ওয়া বিমুহাম্মাদিন নাবিয়্যান।
    </string>
    <string name="meaning2">
আমি আল্লাহতায়ালাকে প্রভু পেয়ে সন্তুষ্ট, ইসলামকে জীবনাদর্শ পেয়ে সন্তুষ্ট ও হজরত মুহাম্মদ (সা.) কে নবী হিসেবে পেয়ে সন্তুষ্ট আছি।
    </string>

    333333333333333333333333333333333333333333333333333333333333333333
    <string name="heading3">
ঋণ থেকে মুক্তির লাভ করার ২টি কার্যকরি দোআ-আমল!
    </string>
    <string name="arbi3">
اللَّهُمَّ اكْفِنِي بِحَلاَلِكَ عَنْ حَرَامِكَ، وَأَغْنِنِي بِفَضْلِكِ عَمَّنْ سِوَاكَ
        \n\n\n
        اللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِنَ الْهَمِّ وَالْحَزَنِ، وَالْعَجْزِ وَالْكَسَلِ، وَالْبُخْلِ وَالْجُبْنِ، وَضَلَعِ الدَّيْنِ وَغَلَبَةِ الرِّجَالِ»
    </string>

    <string name="pro3">
আল্লা-হুম্মাকফিনী বিহালা-লিকা ‘আন হারা-মিকা ওয়া আগনিনী বিফাদ্বলিকা ‘আম্মান সিওয়া-ক
        \n\n\n
         আল্লা-হুম্মা ইন্নী আ‘উযু বিকা মিনাল হাম্মি ওয়াল হাযানি, ওয়া আ‘ঊযু বিকা মিনাল-‘আজযি ওয়াল-কাসালি, ওয়া আ‘ঊযু বিকা মিনাল-বুখলি ওয়াল-জুবনি, ওয়া আ‘ঊযু বিকা মিন দ্বালা‘য়িদ্দাইনি ওয়া গালাবাতির রিজা-ল।

    </string>

    <string name="meaning3">
হে আল্লাহ! আপনি আমাকে আপনার হালাল দ্বারা পরিতুষ্ট করে আপনার হারাম থেকে ফিরিয়ে রাখুন এবং আপনার অনুগ্রহ দ্বারা আপনি ছাড়া অন্য সকলের থেকে আমাকে অমুখাপেক্ষী করে দিন।

        \n\n\n
        হে আল্লাহ! নিশ্চয় আমি আপনার আশ্রয় নিচ্ছি দুশ্চিন্তা ও দুঃখ থেকে, অপারগতা ও অলসতা থেকে, কৃপণতা ও ভীরুতা থেকে, ঋণের ভার ও মানুষদের দমন-পীড়ন থেকে।

    </string>
44444444444444444444444444444444444444444444444444444444444444444444
    <string name="heading4">
টেনশন দূর করার দোয়া
    </string>

    <string name="arbi4">
اللَّهُمَّ إِنِّي عَبْدُكَ، وَابْنُ عَبْدِكَ، ابْنُ أَمَتِكَ، نَاصِيَتِي بِيَدِكَ، مَاضٍ فِيَّ حُكْمُكَ، عَدْلٌ فِيَّ قَضَاؤُكَ، أَسْأَلُكَ بِكُلِّ اسْمٍ هُوَ لَكَ، سَمَّيْتَ بِهِ نَفْسَكَ، أَوْ أَنْزَلْتَهُ فِي كِتَابِكَ، أَوْ عَلَّمْتَهُ أَحَدًا مِنْ خَلْقِكَ، أَوِ اسْتَأْثَرْتَ بِهِ فِي عِلْمِ الْغَيْبِ عِنْدَكَ، أَنْ تَجْعَلَ الْقُرْآنَ رَبِيعَ قَلْبِي، وَنُورَ صَدْرِي، وَجِلَاءَ حُزْنِي، وَذَهَابَ هَمِّي
    </string>

    <string name="pro4">

আল্লাহুম্মা ইন্নী আব্দুকা অবনু আব্দিকা অবনু আমাতিকা, না-সিয়াতী বিয়য়াদিকা, মা-দ্বিন ফিইয়্যা হুকমুকা, আদলুন ফিইয়্যা ক্বাদ্বা-উকা, আসআলুকা বিকুল্লিস্মিন হুয়া লাকা সাম্মাইতা বিহী নাফসাকা আউ আনযালতাহূ ফী কিতাবিকা, আউ আল্লামতাহূ আহাদাম মিন খালক্বিকা, আও ইস্তা’সারতা বিহী ফী ইলমিল গাইবি ইন্দাক; আন তাজআলাল ক্বুরআনা রাবীআ ক্বালবী অনূরা সাদরী অজিলাআ হুযনী অযাহাবা হাম্মী।
    </string>

    <string name="meaning4">
হে আল্লাহ, নিঃসন্দেহে আমি তোমার দাস, তোমার দাসের পুত্র ও তোমার দাসীর পুত্র, আমার ললাটের কেশগুচ্ছ তোমার হাতে।
     \n তোমার বিচার আমার জীবনে বহাল। তোমার মীমাংসা আমার ভাগ্যলিপিতে ন্যায়সঙ্গত।
      \n আমি তোমার নিকট তোমার প্রত্যেক সেই নামের অসিলায় প্রার্থনা করছি- যে নাম তুমি নিজে নিয়েছ,
        \n অথবা তুমি তোমার গ্রন্থে অবতীর্ণ করেছ, অথবা তোমার সৃষ্টির মধ্যে কাউকে তা শিখিয়েছ,
        \n অথবা তুমি তোমার গায়বি ইলমে নিজের নিকট গোপন রেখেছ, তুমি কুরআনকে আমার হৃদয়ের বসন্ত কর, আমার বক্ষের জ্যোতি কর, আমার দুশ্চিন্তা দূর করার এবং আমার উদ্বেগ চলে যাওয়ার কারণ বানিয়ে দাও।

    </string>

  555555555555555555555555555555555555555555555555555555555555555555
    <string name="heading5">
মনের আশা পূরণের দোয়া
    </string>

    <string name="arbi5">
اَللّـهُمَّ اهْدِني فيهِ لِصالِحِ الاَْعْمالِ، وَاقْضِ لي فيهِ الْحَوائِجَ وَالاْمالَ، يا مَنْ لا يَحْتاجُ اِلَى التَّفْسيرِ وَالسُّؤالِ، يا عالِماً بِما في صُدُورِ الْعالَمينَ، صَلِّ عَلى مُحَمَّد وَآلِهِ الطّاهِرينَ .
    </string>

    <string name="pro5">

আল্লাহুম্মাহ-দিনি ফিহি লি-সালিহিল আ’মাল; ওয়া আক্বদি লি ফিহিল হাওয়া-ইঝা ওয়াল আ’মাল; ইয়া মান লা ইয়াহতাঝু ইলাত তাফসিরি ওয়াস সাওয়াল; ইয়া আ’লিমান বিমা ফি সুদুরিল আ’লামিন; সাল্লি আলা মুহাম্মাদিন ওয়া আলিহিত ত্বাহিরিন।

    </string>

    <string name="meaning5">
হে আল্লাহ! এ দিনে আমাকে সৎকাজের দিকে পরিচালিত কর।
        হে মহান সত্ত্বা যার কাছে প্রয়োজনের কথা বলার ও ব্যাখ্যা দেয়ার দরকার হয় না। আমার সব প্রয়োজন ও আশা-আকাঙ্খা পূরণ করে দাও। হে তাবত দুনিয়ার রহস্যজ্ঞানী ! হযরত মুহাম্মদ (সঃ) এবং তাঁর পবিত্র বংশধরদের ওপর রহমত বষর্ণ কর।

    </string>
666666666666666666666666666666666666666666666666666666666666666666666
    <string name="heading6">
          শ্রেষ্ঠ দোয়া
    </string>

    <string name="arbi6">
سُبْحَانَكَ اللَّهُمَّ وَبِحَمْدِكَ وَتَبَارَكَ اسْمُكَ وَتَعَالَى جَدُّكَ وَلَا إلَهَ اَلَّا اَنْتَ ظَلَمْتُ نَفْسِيْ فَاغْفِرْلِيْ اِنَّهُ لَا يَغْفِرُ الذُّنُوْبَ اِلَّا اَنْتَ
    </string>

    <string name="pro6">
সুবহানাকা আল্লাহুম্মা ওয়া বিহামদিকা ওয়া তাবারাকাসমুকা ওয়া তাআলা যাদ্দুকা, লা ইলাহা ইল্লা আংতা জালামতু নাফসি ফাগফিরলি ইন্নাহু লা ইয়াগফিরুজ্জুনুবা ইল্লা আংতা।

    </string>

    <string name="meaning6">
সুতরাং উপরোক্ত দোয়া  হচ্ছে আল্লাহর দরবারর ক্ষমা লাভে শ্রেষ্ঠ দোয়া।
       \n যে দোয়াগুলোর মাধ্যমে আল্লাহ তাআলা হজরত আদম আলাইহিস সালামকে মাফ করে দিয়েছিলেন।
        \n উক্ত দোয়ার মাধ্যমে আল্লাহ তাআলা মুসলিম উম্মাহকে মাগফিরাত লাভ করার তাওফিক দান করুন। আমিন।


    </string>
777777777777777777777777777777777777777777777777777777777777777777777
    <string name="heading7">
বিভিন্ন দুর্ঘটনা থেকে নিরাপদে থাকার দোয়া </string>

    <string name="arbi7">
بِسْمِ اللَّهِ الَّذِى لاَ يَضُرُّ مَعَ اسْمِهِ شَىْءٌ فِى الأَرْضِ وَلاَ فِى السَّمَاءِ وَهُوَ السَّمِيعُ الْعَلِيمُ  </string>

    <string name="pro7">
বিসমিল্লাহিল্লাজি লা ইয়াদুররু মাআসমিহি শাইউন ফিল আরদি ওয়ালা ফিস সামায়ি ওয়া-হুয়াস সামিউল আলিম।

    </string>

    <string name="meaning7">
 আল্লাহর নামের উসিলায় সাহায্য প্রার্থনা করছি।
        \n যার নামের সঙ্গে থাকা অবস্থায় আসমান ও জমিনের কোনো কিছুই কোনো ক্ষতিসাধন করতে পারে না। তিনি সবকিছু শোনেন ও জানেন।

        \n\n\বিশিষ্ট সাহাবি হজরত উসমান ইবনে আফফান (রা.) থেকে বর্ণিত, নবী করিম (সা.) ইরশাদ করেছেন,
        যে ব্যক্তি সকালে এ দোয়া তিনবার পাঠ করবে, সে সন্ধ্যা পর্যন্ত কোনো আকষ্মিক দুর্ঘটনার শিকার হবে না।
        আর যে ব্যক্তি সন্ধ্যায় এ দোয়া তিনবার পাঠ করবে সে সকাল পর্যন্ত কোনো আকষ্মিক দুর্ঘটনার শিকার হবে না। -আবু দাউদ : ৫০৯০, তিরমিজি : ৩৩৮৮

    </string>
888888888888888888888888888888888888888888888888888888888888888888888888
    <string name="heading8">
    দূরারোগ্য ব্যাধি থেকে রক্ষার দোয়া
    </string>

    <string name="arbi8">
سُبْحَانَ اللَّهِ الْعَظِيمِ وَبِحَمْدِهِ
    </string>

    <string name="pro8">
সুবহানাল্লাহিল আজিমি ওয়া বিহামদিহি।

    </string>

    <string name="meaning8">
আমি সুমহান আল্লাহতায়ালার পবিত্রতা ঘোষণা করছি। তার প্রশংসা জ্ঞাপন করছি।

        \n\nহজরত নবী করিম (সা.) ইরশাদ করেছেন, যে ব্যক্তি ফজরের নামাজের পর এ বাক্যটি তিনবার বলবে,
        আল্লাহতায়ালা তাকে তিনটি রোগ থেকে মুক্ত রাখবেন। যথা- অন্ধত্ব, বিকলাঙ্গতা ও পক্ষাঘাত। -মুসনাদে আহমাদ: ২০৬০২

    </string>
99999999999999999999999999999999999999999999999999999999999999999999999
    <string name="haeding9">


    </string>

    <string name="arbi9">

    </string>

    <string name="pro9">


    </string>

    <string name="meaning9">


    </string>

    ////////////////////////////////////////////////////////////////////////
    <string name="tips1_btn">গুনাহ মাফের দোয়া </string>
    <string name="tips2_btn">আল্লাহর সন্তুষ্টি পাওয়ার দোয়া</string>
    <string name="tips3_btn">ঋণ থেকে মুক্তির দোয়া</string>
    <string name="tips4_btn">টেনশন দূর করার দোয়া</string>
    <string name="tips5_btn">মনের আশা পূরণের দোয়া</string>
    <string name="tips6_btn">শ্রেষ্ঠ দোয়া </string>
    <string name="tips7_btn">দুর্ঘটনা থেকে নিরাপদে থাকার দোয়া</string>
    <string name="tips8_btn">রোগ থেকে মুক্তির দোয়া</string>
///////////////////////////////////////////////////////////////

    //always use
    <string name="pronunciation">উচ্চারণ</string>
    <string name="answer1">অর্থ</string>
    <string name="fojilot">ফজিলত</string>



    ///////////////////////////////////////////////////////////

</resources>
