<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/liner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame3"
    android:orientation="vertical"
    tools:context="com.eoms.kon_dowa_porle_ki_hoy.MainActivity">

    <ScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="150dp"
        android:scrollbars="none">


        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">


            <Button
                android:id="@+id/btn1"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/button_pressed"
                android:text="@string/tips1_btn" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/button_pressed"
                android:text="@string/tips2_btn" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/button_pressed"
                android:text="@string/tips3_btn" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/button_pressed"
                android:text="@string/tips4_btn" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/button_pressed"
                android:text="@string/tips5_btn" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/button_pressed"
                android:text="@string/tips6_btn" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/button_pressed"
                android:text="@string/tips7_btn" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/button_pressed"
                android:text="@string/tips8_btn" />
        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />
</LinearLayout>
